--- a/1/index.html
+++ b/1/index.html
@@ -8,8 +8,8 @@ Hasil saya menyadur materi dan penjelasan video pada pertemuan ke 1:<br>
 3. Membuat hasil saduran di github.com untuk setiap pertemuan.<br>
 4. dst<br>
 <br>
-<img src="1.jpeg">
+<img src="1.jpg">
 <br>
-<img src="2.jpeg">
+<img src="2.jpg">
 <br>
-<img src="3.jpeg">
+<img src="3.jpg">
