--- a/2/index.html
+++ b/2/index.html
@@ -1,5 +1,5 @@
-NIM       : 1811500011
-NAMA      : Muhammad Ilham Febrian
-Kelompok  : TI6J
-
-Hasil saya menyadur materi dan penjelasan video pada pertemuan ke 2:
+NIM       : 1811500011<br>
+NAMA      : Muhammad Ilham Febrian<br>
+Kelompok  : TI6J<br>
+<br>
+Hasil saya menyadur materi dan penjelasan video pada pertemuan ke 2:<br>
