--- a/2/index.html
+++ b/2/index.html
@@ -3,3 +3,7 @@ NAMA      : Muhammad Ilham Febrian<br>
 Kelompok  : TI6J<br>
 <br>
 Hasil saya menyadur materi dan penjelasan video pada pertemuan ke 2:<br>
+<ol>
+ <li>Perhitungan nilai kehadiran untuk setiap pertemuan dengan membuat file index.html di setiap direktori pada repisotary github yang ditandai dengan angka, contoh nama folder (2) untuk pertemuan ke-2, dst</li>
+ <li>Perhitungan nilai tugas dinilai berdasarkan kualitas atau isi dari konten file index.html disetiap pertemuan yang disadur</li>
+</ol>
