--- a/2/index.html
+++ b/2/index.html
@@ -6,7 +6,14 @@ Hasil saya menyadur materi dan penjelasan video pada pertemuan ke 2:<br>
 <ol>
  <li>Perhitungan nilai kehadiran untuk setiap pertemuan dengan membuat file index.html di setiap direktori pada repisotary github yang ditandai dengan angka, contoh nama folder (2) untuk pertemuan ke-2, dst.</li>
  <li>Perhitungan nilai tugas dinilai berdasarkan kualitas atau isi dari konten file index.html disetiap pertemuan yang disadur.</li>
- <li>Analisa masalah, kemudian dilanjutkan dengan proses Menganalisa sistem berjalan atau Analisis Sistem Berjalan yang berisi SOP.</li>
+ <li>Analisa masalah, kemudian dilanjutkan dengan proses Menganalisa sistem berjalan atau Analisis Sistem Berjalan yang berisi SOP.<br>
+ <br>
+ <img src="1.png">
+ <br>
+ <img src="2.png"></li>
  <li>Membuat Activiy Diagram</li>
-
 </ol>
+<br><br>
+hasil file project astah buatan saya :D (Activity Diagram Sistem Berjalan) <a href="AD Sistem Berjalan.asta" target="_blank">Download</a>
+<br><br>
+<img src="AD Sistem Berjalan.png" width="100%">
