--- a/2/index.html
+++ b/2/index.html
@@ -8,10 +8,14 @@ Hasil saya menyadur materi dan penjelasan video pada pertemuan ke 2:<br>
  <li>Perhitungan nilai tugas dinilai berdasarkan kualitas atau isi dari konten file index.html disetiap pertemuan yang disadur.</li>
  <li>Analisa masalah, kemudian dilanjutkan dengan proses Menganalisa sistem berjalan atau Analisis Sistem Berjalan yang berisi SOP.<br>
  <br>
- <img src="1.png">
+ <img src="1.png" width="50%">
  <br>
- <img src="2.png"></li>
+ <img src="2.png" width="50%"></li>
  <li>Membuat Activiy Diagram</li>
+ <br>
+ <img src="pembuatan activity diagram.png" width="50%">
+ <br>
+ <img src="pembuatan activity diagram 2.png" width="50%">
 </ol>
 <br><br>
 hasil file project astah buatan saya :D (Activity Diagram Sistem Berjalan) <a href="AD Sistem Berjalan.asta" target="_blank">Download</a>
