--- a/3/index.html
+++ b/3/index.html
@@ -1,6 +1,6 @@
-NIM       : 1811500011
-NAMA      : Muhammad Ilham Febrian
-Kelompok  : TI6J
+NIM       : 1811500011<br>
+NAMA      : Muhammad Ilham Febrian<br>
+Kelompok  : TI6J<br>
 <br>
 Hasil saya menyadur materi dan penjelasan video pada pertemuan ke 3:
 <ol>
