--- a/3/index.html
+++ b/3/index.html
@@ -4,5 +4,9 @@ Kelompok  : TI6J<br>
 <br>
 Hasil saya menyadur materi dan penjelasan video pada pertemuan ke 3:
 <ol>
- <li></li>
+ <li>Analisa solusi sistem yang diusulkan</li>
+ <li>Analisa Proses bisnis sistem yang diusulkan</li>
+ <li>Activity Diagram untuk memodelkan sistem usulan</li>
+ <li>Sistem usulan itu harus memperoleh manfaat bagi stakeholder (misalnya: pelayanan toko dan konsumen), manfaat ini biasanya untuk memudahkan atau menghemat proses bisnis</li>
+ <li> Activity diagram digunakan untuk menggambarkan proses bisnis atau juga untuk menggambarkan aktivitas sistem, bukan detail pada suatu halaman digambarkan menggunakan sequence Diagram.</li>
 </ol>
