--- a/3/index.html
+++ b/3/index.html
@@ -9,4 +9,14 @@ Hasil saya menyadur materi dan penjelasan video pada pertemuan ke 3:
  <li>Activity Diagram untuk memodelkan sistem usulan</li>
  <li>Sistem usulan itu harus memperoleh manfaat bagi stakeholder (misalnya: pelayanan toko dan konsumen), manfaat ini biasanya untuk memudahkan atau menghemat proses bisnis</li>
  <li> Activity diagram digunakan untuk menggambarkan proses bisnis atau juga untuk menggambarkan aktivitas sistem, bukan detail pada suatu halaman digambarkan menggunakan sequence Diagram.</li>
+ Activity diagram digunakan untuk menggambarkan proses bisnis atau juga untuk menggambarkan aktivitas sistem, bukan detail pada suatu halaman digambarkan menggunakan sequence Diagram.
+<br><br>
+ <img src="1.png" width="100%">
+ <br><br>
+ <img src="2.png" width="100%">
+ <br><br>
+ <img src="3.png" width="100%">
+ <br><br>
+ <img src="AD.png" width="100%">
 </ol>
+<a href="AD Sistem Berjalan.asta" target="_blank">Download</a>
