--- a/3/index.html
+++ b/3/index.html
@@ -19,4 +19,4 @@ Hasil saya menyadur materi dan penjelasan video pada pertemuan ke 3:
  <br><br>
  <img src="AD.png" width="100%">
 </ol>
-<a href="AD Sistem Berjalan.asta" target="_blank">Download</a>
+<a href="AD Berjalan & Usulan.asta" target="_blank">Download</a>
