--- a/4/index.html
+++ b/4/index.html
@@ -4,7 +4,17 @@ Kelompok  : TI6J<br>
 <br>
 Hasil saya menyadur materi dan penjelasan video pada pertemuan ke 4:<br>
 <ol>
-  <li></li>
-  <li></li>
-  <li></li>
+  <li>Menjelaskan pengertian dan penggunaan dari usecase diagaram dengan menggambarkan fungsi - fungsi kedalam sistem yang dilakukan oleh aktor (pengguna atau user)</li>
+  <li>Menjelaskan fungsi beserta contohnya dari include atau extend yang digunakan di dalam usecase diagram yang dimana include yaitu disertakan sebagai syarat usecase yang dapat dijalankan
+harus membutuhkan usecase ini, sedangkan extend yaitu suatu usecase yang dapat berdiri sendiri meski tanpa usecase dari yang lain (pengembangan).</li>
+  <li>Membuat deskripsi usecase untuk menjelaskan fungsi dari nama usecase yang dijalankan agar mempermudah pengguna dalam menjalankan sebuah sistem.</li>
+  <li>Menjelaskan apa itu skenario dari usecase diagram yang merupakan alur jalannya proses usecase dari sisi aktor maupun sistem yang digambarkan dengan skenario normal (sistem berjalan normal tanpa kendala)
+    dan skenario alternatif (sistem jika terjadi kesalahan).</li>
+  <li>Menjelaskan contoh studi kasus (dalam hal ini contoh studi kasus lanjutan toko penjualan suku cadang motor) kemudian menggambarkan dengan usecase diagram beserta deskripsi usecase
+    dengan membuat usecase diagram konsumen.</li>
 </ol>
+<br><br>
+ <img src="Usecase Diagram.png" width="100%">
+<br><br>
+Hasil usecase diagram di astah <a href="Usecase Diagram Konsumen.asta" target="_blank">Download</a>
+Pengerjaan usecase diagram dan deskripsi diagram dalam bentuk file word <a href="Usecase Diagram dan Deskripsi Diagram.docx" target="_blank">Download</a>
