--- a/4/index.html
+++ b/4/index.html
@@ -16,5 +16,5 @@ harus membutuhkan usecase ini, sedangkan extend yaitu suatu usecase yang dapat b
 <br><br>
  <img src="Usecase Diagram.png" width="100%">
 <br><br>
-Hasil usecase diagram di astah <a href="Usecase Diagram Konsumen.asta" target="_blank">Download</a>
+Hasil usecase diagram di astah <a href="Usecase Diagram Konsumen.asta" target="_blank">Download</a><br>
 Pengerjaan usecase diagram dan deskripsi diagram dalam bentuk file word <a href="Usecase Diagram dan Deskripsi Diagram.docx" target="_blank">Download</a>
