--- a/5/index.html
+++ b/5/index.html
@@ -4,7 +4,17 @@ Kelompok  : TI6J<br>
 <br>
 Hasil saya menyadur materi dan penjelasan video pada pertemuan ke 5:<br>
 <ol>
-  <li></li>
-  <li></li>
-  <li></li>
+  <li>Menjelaskan pengertian dan penggunaan dari lanjutan usecase diagaram dengan membuat rancangan layar dari konsumen dengan menggunakan software pendukung yaitu pencil project</li>
+  <li>Menjelaskan fitur-fitur kegunaan dari software pencil project dan mempraktekkan cara penggunaan dari pembuatan rancangan layar yang ingin dibuat</li>
+  <li>Melanjutkan pembuatan rancangan layar dari usecase diagram konsumen dengan menggunakan software pencil project dan menjelaskan setiap gambar rancangan layar tersebut yang kemudian file tersebut di pindahkan ke file word dan di upload ke repositori github</li>
 </ol>
+Melanjutkan pembuatan rancangan layar dari usecase diagram konsumen dengan menggunakan software pencil project dan menjelaskan setiap gambar rancangan layar tersebut yang kemudian file tersebut di pindahkan ke file word dan di upload ke repositori github
+<br><br>
+Rancangan Layar Halaman Login, Rancangan Layar Halaman Daftar Akun, Rancangan Layar Halaman Utama Aplikasi<br>
+<img src="Login, Daftar, Homescreen.PNG" width="100%">
+<br><br>
+Rancangan Layar Halaman Katalog Suku Cadang, Rancangan Layar Halaman Keranjang Suku Cadang, Rancangan Layar Halaman Status Pesanan<br>
+<img src="Katalog, Keranjang, Status Pesanan.PNG" width="100%">
+<br><br>
+Download file Hasil rancangan layar pada pencil project <a href="Rancangan Layar.epgz" target="_blank">Download</a><br>
+Download file Hasil pengerjaan penjelasan mengenai rancangan layar dalam bentuk Word <a href="Use Case Diagram, Rancangan Layar & Penjelasan.docx" target="_blank">Download</a>
