--- a/6/index.html
+++ b/6/index.html
@@ -4,7 +4,21 @@ Kelompok  : TI6J<br>
 <br>
 Hasil saya menyadur materi dan penjelasan video pada pertemuan ke 6:<br>
 <ol>
-  <li></li>
-  <li></li>
-  <li></li>
+  <li>Menjelaskan mengenai class diagram beserta pengertian dan penggunaan dari class diagram yang mengambarkan hubungan antar kelas atau antar tabel</li>
+  <li>Menjelaskan class diagram merupakan representasi lain dari Entity Relationship Diagram (ERD) dan Logical Record Structure (LRS), tetapi lebih lengkap karena memuat struktur tabel dan operasi terhadap basisdata (query) terhadap tabel tersebut.</li>
+  <li>Class diagram terdiri dari : nama class, attribut, method dimana memiliki fungsi yang sangat penting dalam membuat sebuah rancangan yang membentuk class diagram.</li>
+  <li>Stereotype (dalam basis data) yaitu menentukan / menandakan attribut yang menjadi pk = primary key maupun fk = foreign key.</li>
+  <li>Multiplicity yaitu menentukan tingkat hubungan / kardinalitas antar class melalui association (garis hubungan antar class), yang ditentukan dengan tingkatan sebagai berikut:<br>
+    <ol>
+      <li>1 => hanya 1 dan pasti hanya 1</li>
+      <li>0..1 => dapat tidak ada (kosong) sampai dengan 1</li>
+      <li>0..* => dapat tidak ada (kosong) sampai dengan tak terhingga (banyak)</li>
+      <li>* => dapat banyak (tak terhingga)</li>
+      <li>1..* => sedikitnya 1, bisa lebih dari 1</li>
+    </ol>
+  <li>Class diagram menggambarkan hubungan antar class atau hubungan antar tabel (struktur tabel)</li>
+  <li>Method diisi dengan operasi apa saja yang dilakukan pada class/tabel, misal: select/baca,insert/tambah/simpan,update/ubah,delete/hapus,count/hitung jumlah, auto_numbering/nomor otomatis/kode otomatis, dst.</li>
 </ol>
+<br><br>
+ <img src="Usecase Diagram.png" width="100%">
+<br><br>
