--- a/6/index.html
+++ b/6/index.html
@@ -20,5 +20,13 @@ Hasil saya menyadur materi dan penjelasan video pada pertemuan ke 6:<br>
   <li>Method diisi dengan operasi apa saja yang dilakukan pada class/tabel, misal: select/baca,insert/tambah/simpan,update/ubah,delete/hapus,count/hitung jumlah, auto_numbering/nomor otomatis/kode otomatis, dst.</li>
 </ol>
 <br><br>
- <img src="Usecase Diagram.png" width="100%">
+Rancangan ERD pada activity diagram<br>
+<img src="Rancangan ERD.png" width="100%">
 <br><br>
+Rancangan LRS pada activity diagram<br>
+<img src="Rancangan RLS.png" width="100%">
+<br><br>
+Rancangan Class Diagram<br>
+<img src="Rancangan Class Diagram.png" width="100%">
+<br><br>
+Hasil Class Diagram saya pada project astah <a href="Class Diagram.asta" target="_blank">Download</a><br>
