--- a/7/index.html
+++ b/7/index.html
@@ -4,7 +4,32 @@ Kelompok  : TI6J<br>
 <br>
 Hasil saya menyadur materi dan penjelasan video pada pertemuan ke 7:<br>
 <ol>
-  <li></li>
-  <li></li>
-  <li></li>
+  <li>Sequence diagram menggambarkan urutan proses yang terjadi pada sebuah halaman/form pada aplikasi/sistem</li>
+  <li>Sequence diagram sangat erat hubungannya dengan deskripsi UseCase + Rancangan Layar + Class Diagram</li>
+  <li>Elemen inti pada Sequence Diagram :</li>
+     <ol>
+       <li>Lifeline (Actor), Lifeline (Boundary), Lifeline (Control), Lifeline (Entity), Message</li>
+       <li>Actor => Pengguna aplikasi/sistem</li>
+       <li>Boundary => form/halaman di aplikasi</li>
+       <li>Control => code program</li>
+       <li>Entity => Tabel</li>
+       <li>Message => Aktivitas di aplikasi/sistem</li>
+     </ol>
+  <li>Actor berinteraksi dengan Boundary, Boundary berinteraksi dengan Control, Control berinteraksi dengan Entity</li>
+  <li>Masing - masing interaksi digambarkan dengan garis panah aktivitas (Message)</li>
 </ol>
+<br><br>
+Use Case Diagram<br>
+<img src="Use Case Diagram.png" width="100%">
+<br><br>
+Rancangan Layar<br>
+<img src="Rancangan Layar.png" width="100%">
+<br><br>
+Class Diagram Rancangan Layar Daftar Akun<br>
+<img src="Class Diagram Rancangan Layar Daftar Akun.png" width="100%">
+<br><br>
+Sequence Diagram<br>
+<img src="Sequence Diagram.png" width="100%">
+<br><br>
+Download file Hasil AD Berjalan & Usulan, UCD, CD, Sequence Diagram <a href="AD Berjalan & Usulan, UCD, CD, Sequence Diagram.asta" target="_blank">Download</a><br>
+Download file Hasil Deskripsi UseCase format Word <a href="Deskripsi UseCase.docx" target="_blank">Download</a><br>
